--- a/SfButton_SVGSupport/SfButton_SVGSupport/SfButton_SVGSupport.csproj
+++ b/SfButton_SVGSupport/SfButton_SVGSupport/SfButton_SVGSupport.csproj
@@ -11,6 +11,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="background.svg" />
+    <None Remove="commerce-and-shopping.svg" />
+    <None Remove="Typogy1.svg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="background.svg" />
+    <EmbeddedResource Include="commerce-and-shopping.svg" />
+    <EmbeddedResource Include="Typogy1.svg" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Syncfusion.Xamarin.Buttons" Version="18.4.0.34" />
     <PackageReference Include="Xamarin.Forms" Version="4.6.0.726" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
