--- a/SfButton_SVGSupport/SfButton_SVGSupport/SfButton_SVGSupport.Android/SfButton_SVGSupport.Android.csproj
+++ b/SfButton_SVGSupport/SfButton_SVGSupport/SfButton_SVGSupport.Android/SfButton_SVGSupport.Android.csproj
@@ -57,9 +57,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Syncfusion.Xamarin.Buttons">
-      <Version>18.1.0.59</Version>
+      <Version>*</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="4.4.0.991477" />
+    <PackageReference Include="Xamarin.Forms" Version="*" />
     <PackageReference Include="Xamarin.Forms.Svg">
       <Version>1.0.3</Version>
     </PackageReference>
