--- a/SfButton_SVGSupport/SfButton_SVGSupport/SfButton_SVGSupport/SfButton_SVGSupport.csproj
+++ b/SfButton_SVGSupport/SfButton_SVGSupport/SfButton_SVGSupport/SfButton_SVGSupport.csproj
@@ -28,8 +28,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.Xamarin.Buttons" Version="18.1.0.59" />
-    <PackageReference Include="Xamarin.Forms" Version="4.4.0.991477" />
+    <PackageReference Include="Syncfusion.Xamarin.Buttons" Version="*" />
+    <PackageReference Include="Xamarin.Forms" Version="*" />
     <PackageReference Include="Xamarin.Forms.Svg" Version="1.0.3" />
   </ItemGroup>
 </Project>
